--- a/views/error.jade
+++ b/views/error.jade
@@ -4,7 +4,7 @@ block content
   #main
     h1#pagetitle error
     #nav
-      #statusmessage
+      #errormessage
         if (error === 'loginerror')
           p Incorrect login
         else
