--- a/views/index.jade
+++ b/views/index.jade
@@ -7,8 +7,8 @@ html
     meta(name="viewport", content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no")
     meta(name="designer", content="gildean <http://julkinen.salaliitto.com>")
     title Hachi
-    link(rel="shortcut icon", href="/stylesheets/favicon.ico")
-    link(rel="apple-touch-icon", href="/stylesheets/apple-touch-icon.png")
+    link(rel="shortcut icon", href="/favicon.ico")
+    link(rel="apple-touch-icon", href="/apple-touch-icon.png")
     link(rel="stylesheet", href="/stylesheets/jquery-ui.css")
     link(rel="stylesheet", href="/stylesheets/style.css")
     block head
