--- a/views/login.jade
+++ b/views/login.jade
@@ -6,6 +6,7 @@ block content
     form#login(name="login", method="post", action="/login")
       input.textinput(name="username", type="text", required)
       input.textinput(name="password", type="password", required)
+      input(type="hidden", name="_csrf", value="#{token}")
       input.button(type="submit", value="login")
   script(src="/js/jquery.js")
   script(src="/js/queries.js")
