--- a/public/stylesheets/jquery-ui.css
+++ b/public/stylesheets/jquery-ui.css
@@ -86,7 +86,7 @@
 ----------------------------------*/
 
 /* states and images */
-.ui-icon { width: 16px; height: 16px; background-image: url(images/ui-icons_cccccc_256x240.png); }
+.ui-icon { width: 16px; height: 16px; background-image: url(images/ui-icons_cccccc_256x240.png); -webkit-transform: scale(1.2); -moz-transform: scale(1.2);}
 .ui-widget-content .ui-icon {background-image: url(images/ui-icons_cccccc_256x240.png); }
 .ui-widget-header .ui-icon {background-image: url(images/ui-icons_ffffff_256x240.png); }
 .ui-state-default .ui-icon { background-image: url(images/ui-icons_cccccc_256x240.png); }
