--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -41,7 +41,7 @@ body, html, #main {
 h2 {
 	font: 220% Andalus, Palatino, serif;
 	text-align: center;	
-	text-shadow: -1px 1px 8px rgba(0,0,0,0.5), -1px -1px 2px rgba(0,0,0,0.8), 1px 1px 2px rgba(0,0,0,0.8);
+	text-shadow: 0px 0px 5px rgba(0,0,0,0.5), 1px 2px 2px rgba(0,0,0,0.8);
 	color: rgba(255,255,255,0.9);
 	font-size: 1.4em;
 }
@@ -59,10 +59,11 @@ h2 {
 	border: 1px solid rgba(0,0,0,0.2);
 	padding: 10px 70px 10px 20px;
 	border-radius: 6px;
-	min-height: 230px;
-	max-height: 100vh;
-	overflow: auto;
-	min-width: 210px;
+	height: 260px;
+	overflow: hidden;
+	width: 20%;
+	min-width: 250px;
+	max-width: 340px;
 	margin: 5px;
 	float: left;
 	color: #FFF;	
@@ -117,10 +118,10 @@ li p {
 	text-decoration: underline;
 	font: 180% Andalus, Palatino, serif;
 	text-decoration: none;
-	transition: all 0.3s ease-in-out;
-	-o-transition: all 0.3s ease-in-out;
-	-webkit-transition: all 0.3s ease-in-out;
-	-moz-transition: all 0.3s ease-in-out;
+	transition: color 0.3s ease-in-out;
+	-o-transition: color 0.3s ease-in-out;
+	-webkit-transition: color 0.3s ease-in-out;
+	-moz-transition: color 0.3s ease-in-out;
 }
 
 .dronelink:hover {
@@ -133,6 +134,7 @@ li p {
 	left: 10px;
 	bottom: 5px;
 	z-index: 600;
+	opacity: 0.8;
 }
 
 #pagetitle {
@@ -142,21 +144,20 @@ li p {
 	font: 220% Andalus, Palatino, serif;
 	text-decoration: none;
 	font-weight: bold;
-	color: #FFF;
+	color: rgba(255,255,255,0.9);
 	text-shadow: -2px 2px 3px rgba(0,0,0,0.5), -1px 1px 1px rgba(0,0,0,0.5), 0 0 4px rgba(0,0,0,0.3);
 	margin: 0;
 	padding: 0;
 	border: 0;
 	z-index: 900;
-	transition: all 0.3s ease-in-out;
-	-o-transition: all 0.3s ease-in-out;
-	-webkit-transition: all 0.3s ease-in-out;
-	-moz-transition: all 0.3s ease-in-out;
+	transition: color 0.3s ease-in-out;
+	-o-transition: color 0.3s ease-in-out;
+	-webkit-transition: color 0.3s ease-in-out;
+	-moz-transition: color 0.3s ease-in-out;
 }
 
 #pagetitle:hover {
 	color: #EE006E;
-	text-shadow: -2px 2px 3px rgba(0,0,0,0.5), -1px 1px 1px rgba(0,0,0,0.5), 0 0 4px rgba(0,0,0,0.7);
 	cursor: crosshair;
 }
 
@@ -216,20 +217,19 @@ span.dronetooltip:after {
 
 h1 > .tooltip {
 	position: absolute;
-	top: 0px;
+	top: -10px;
 	left: 95px;
 	text-shadow: -1px 1px 2px rgba(0,0,0,0.4);
 	width: 95px;
+	padding: 5px 10px;
+	line-height: 20px;
 }
 
 h1 > .tooltip a {
-	position: absolute;
-	top: 15px;
-	left: 15px;
 	color: #FFF;
 	font: 0.5em Andalus, Palatino, serif;
 	text-decoration: none;
-	line-height: 20px;
+	line-height: 15px;
 	padding: 0;
 }
 
@@ -265,6 +265,7 @@ div:hover > .tooltip, h1:hover > .tooltip, button:hover .dronetooltip {
 	padding: 4px 22px;
 	margin: 5px;
 	float: right;
+	opacity: 0.8;
 }
 
 .dronebutton {
@@ -284,10 +285,9 @@ div:hover > .tooltip, h1:hover > .tooltip, button:hover .dronetooltip {
 	left: 0;
 	width: 100%;
 	text-align: center;
-	color: rgba(255,255,255,0.8);
-	background: rgba(0,0,0,0.3);
-	opacity: 0.8;
-	text-shadow: -1px 1px 8px rgba(0,0,0,0.5), -1px -1px 2px rgba(0,0,0,0.8), 1px 1px 2px rgba(0,0,0,0.8);
+	color: rgba(255,255,255,0.9);
+	background: rgba(20,20,20,0.7);
+	text-shadow: 0px 0px 8px rgba(0,0,0,0.5), 1px 1px 2px rgba(0,0,0,0.8);
 	box-shadow: 0 -4px 8px rgba(0,0,0,0.15);
 	border-top: 1px solid rgba(0,0,0,0.3); 
 }
@@ -305,12 +305,14 @@ div:hover > .tooltip, h1:hover > .tooltip, button:hover .dronetooltip {
 	display: inline-block;
 }
 
-#drones {
-	padding: 10px 10px 55px;
+.drones {
+	margin: 20px auto 0;
+	padding: 0 1% 60px;
 	width: 90%;
 	min-width: 360px;
+	max-width: 1800px;
 	overflow-y: auto;
-	text-shadow: -1px 1px 8px rgba(0,0,0,0.5), -1px -1px 2px rgba(0,0,0,0.8), 1px 1px 2px rgba(0,0,0,0.8);
+	text-shadow: -0 0 8px rgba(0,0,0,0.5), 1px 1px 2px rgba(0,0,0,0.8);
 }
 
 .key {
@@ -450,6 +452,9 @@ button {
 	box-shadow: inset 0 0 30px rgba(239,0,100,0.9);
 }
 
+.ui-icon {
+}
+
 .ui-widget-header .ui-icon span {
 	background-image: none;
 	background: rgba(240, 0, 100);
@@ -460,7 +465,20 @@ button {
 	font-size: 0.8em;
 }
 
+#clearli {
+	padding: 30px 0;
+	width: 100%;
+	display: inline-block;
+	float: left;
+}
 
+.fullscreen {
+	max-width: 100%;
+	min-width: 100%;
+	width: 100%;
+	padding: 0;
+	margin: 0;
+}
 
 .ui-button-text {
 	position: relative;
@@ -468,4 +486,16 @@ button {
 
 .active {
 	box-shadow: inset 0 0 25px rgb(238, 0, 110)
+}
+
+#addapp label, #addapp input {
+	display: block;
+	width: 80%;
+	padding: 4px;
+	margin: 4px auto;
+}
+#addapp select {
+	display: block;
+	width: 25%;
+	margin: 4px 0 4px 10%;
 }
