--- a/views/index.jade
+++ b/views/index.jade
@@ -17,4 +17,4 @@ html
     script(src="/js/jquery.js")
     script(src="/js/jquery-ui.js")
     script(src="/js/moment.js")
-    script(src="/js/queries.js")
+    block scripts
